<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/new_task"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_navigate"
        >


    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="32dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="32dp"/>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:id="@+id/til_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"


        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintEnd_toEndOf="@+id/guide_end"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"

        android:hint="@string/title"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:id="@+id/til_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"



        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintEnd_toStartOf="@+id/til_hour"
        app:layout_constraintTop_toBottomOf="@+id/til_title"

        android:hint="@string/date"
        app:startIconDrawable="@drawable/ic_calendar"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"
         />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:id="@+id/til_hour"
        android:layout_width="150dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toEndOf="@+id/til_data"
        app:layout_constraintEnd_toEndOf="@+id/guide_end"
        app:layout_constraintTop_toTopOf="@+id/til_data"

        android:hint="@string/hour"
        app:startIconDrawable="@drawable/ic_timer"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:id="@+id/til_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"


        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintEnd_toEndOf="@+id/guide_end"
        app:layout_constraintTop_toBottomOf="@+id/til_data"

        android:hint="@string/description"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/bt_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"

        app:layout_constraintBottom_toTopOf="@+id/bt_new_task"
        app:layout_constraintEnd_toEndOf="@+id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/bt_new_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/create_task"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start" />

</androidx.constraintlayout.widget.ConstraintLayout>